--- a/styles.css
+++ b/styles.css
@@ -47,17 +47,57 @@ body {
 }
 /* Navigation */
 .navwrap {
-  text-align: right;
+  text-align: left;
+}
+ul {
+  padding: 0px;
 }
 li {
   display: inline-block;
-  margin: 10px;
-  padding-right: 10px;
+  margin: 10px 5px;
 }
-li:last-child {
-  margin-right: 25px;
+li:first-child {
+  margin-left: 10px;
 }
 li a {
   text-decoration: none;
-  border-bottom: 1px solid black;
+  border: 1px solid black;
+  border-radius: 15%;
+  padding: 3px;
+}
+li a:hover {
+  background-color: black;
+}
+
+/* Header Content */
+.profileContainer {
+  display: flex;
+  margin-top: 2rem;
+}
+.left-half {
+  flex: 1;
+  text-align: center;
+}
+.right-half {
+  flex: 1;
+}
+.profilepic {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  margin-right: 40%;
+  float: right;
+}
+
+
+
+
+
+
+
+/* Float Clearfix */
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
