--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,59 @@
-.grid {
-  display: grid;
-  height: 100%;
-  grid-gap: 2px;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 75px 200px 200px 200px 100px;
-  grid-template-areas:
-  "n n n n n n n n n n n n"
-  "h h h h h h h h h h h h"
-  "w w w w w w w w w w w w"
-  "c c c c c c c c c c c c"
-  "f f f f f f f f f f f f";
-}
-#navigation {
-  grid-area: n;
-  border: 1px solid black;
-}
-#header {
-  grid-area: h;
-  border: 1px solid black;
-  width: 80%;
-  margin: 0 auto;
-}
-#work {
-  grid-area: w;
-  border: 1px solid black;
-  width: 80%;
-  margin: 0 auto;
-}
-#contact {
-  grid-area: c;
-  border: 1px solid black;
-  width: 80%;
-  margin: 0 auto;
-}
-#footer {
-  grid-area: f;
-  border: 1px solid black;
-}
-
-
-
-
 body {
-  background-color: pink;
-  margin: 0%;
 }
+
 /* Navigation */
-.navwrap {
-  text-align: left;
+.navbar {
+  height: 80px;
+  background: transparent;
+  border: none;
+  color: white;
+  z-index: 100;
+  transition: background-color 1s ease 0s;
 }
+.navbar-brand {
+  margin-top: -10px;
+  color: black;
+}
+.navbar-brand:hover {
+  color: #C57ED3;
+  border: 1px solid #C57ED3;
+}
+.navbar-nav li a {
+  color: black;
+  margin: -10px 5px 5px 5px;
+}
+.navbar-nav li a:hover {
+  color: #C57ED3;
+  border: 1px solid #C57ED3;
+}
+.navbar-toggler {
+  border-color: #C57ED3;
+}
+.navbar-toggler-icon {
+  background-color: white;
+}
+
+/* Solid class attached on scroll past first section */
+
+.navbar.solid {
+  background-color: #490D40;
+  transition: background-color 1s ease 0s;
+  box-shadow: 0 0 4px grey;
+  .navbar-brand {
+    color: #C57ED3;
+    transition: color 1s ease 0s;
+  }
+  .navbar-nav {
+    >li {
+      >a {
+        color: #C57ED3;
+        transition: color 1s ease 0s;
+      }
+    }
+  }
+}
+
+/*
 ul {
   padding: 0px;
 }
@@ -67,37 +72,78 @@ li a {
 }
 li a:hover {
   background-color: black;
+} */
+
+/* Jumbotron */
+/*
+.skybg {
+  background: url('sky.jpg') no-repeat center center;
+  position: fixed;
+  padding-top: 4rem;
+  width: 100%;
+  height: 365px;
+  /*same height as jumbotron */
+  /* top: 0;
+  left: 0;
+  z-index: -1;
+} */
+
+/* .jumbotron {
+  height: 365px;
+  color: white;
+  text-shadow: #444 0 1px 1px;
+  background: transparent;
+} */
+
+.jumbotron {
+  background: transparent;
+  background: url("sky.jpg")
+              no-repeat;
+  background-position: top;
+  background-attachment: fixed;
+  margin-bottom: 0px;
+  height: 375px;
 }
 
-/* Header Content */
-.profileContainer {
-  display: flex;
-  margin-top: 2rem;
-}
-.left-half {
-  flex: 1;
+button:hover {}
+
+/* About Section */
+
+.about {
+  padding-top: 30px;
+  background-color: gray;
   text-align: center;
 }
-.right-half {
-  flex: 1;
+.about-image {
+  background-color: gray;
+  padding-top: 10px;
+  /* centered image */
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
 }
-.profilepic {
+.profile-image {
   border-radius: 50%;
-  height: 100px;
-  width: 100px;
-  margin-right: 40%;
-  float: right;
+  height: 350px;
+  width: 350px;
+}
+.list-group {
+}
+.list-group-item {
+  background-color: grey;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+.list-group-item:last-child {
+  padding-bottom: 10px;
+}
+.skills {
+  text-align: center;
 }
 
-
-
-
-
-
-
-/* Float Clearfix */
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+/* MEDIA QUERIES */
+@media only screen and (max-width: 615px) {
+     .profile-image {
+        background-color: ;
+    }
 }
