--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,14 @@ body {
   border-color: #C57ED3;
 }
 .navbar-toggler-icon {
-  background-color: white;
+  background: transparent;
 }
 
 /* Solid class attached on scroll past first section */
 
 .navbar.solid {
-  background-color: #490D40;
-  transition: background-color 1s ease 0s;
+  background-color: white;
+  transition: 1s ease 0s;
   box-shadow: 0 0 4px grey;
   .navbar-brand {
     color: #C57ED3;
@@ -53,48 +53,7 @@ body {
   }
 }
 
-/*
-ul {
-  padding: 0px;
-}
-li {
-  display: inline-block;
-  margin: 10px 5px;
-}
-li:first-child {
-  margin-left: 10px;
-}
-li a {
-  text-decoration: none;
-  border: 1px solid black;
-  border-radius: 15%;
-  padding: 3px;
-}
-li a:hover {
-  background-color: black;
-} */
-
 /* Jumbotron */
-/*
-.skybg {
-  background: url('sky.jpg') no-repeat center center;
-  position: fixed;
-  padding-top: 4rem;
-  width: 100%;
-  height: 365px;
-  /*same height as jumbotron */
-  /* top: 0;
-  left: 0;
-  z-index: -1;
-} */
-
-/* .jumbotron {
-  height: 365px;
-  color: white;
-  text-shadow: #444 0 1px 1px;
-  background: transparent;
-} */
-
 .jumbotron {
   background: transparent;
   background: url("sky.jpg")
@@ -104,11 +63,11 @@ li a:hover {
   margin-bottom: 0px;
   height: 375px;
 }
-
-button:hover {}
+.jumbotron .container {
+  padding-top: 2rem;
+}
 
 /* About Section */
-
 .about {
   padding-top: 30px;
   background-color: gray;
@@ -141,9 +100,25 @@ button:hover {}
   text-align: center;
 }
 
-/* MEDIA QUERIES */
-@media only screen and (max-width: 615px) {
-     .profile-image {
-        background-color: ;
-    }
+/* Work Section */
+.work {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
+.card-work {
+  width: 18rem;
+}
+
+/* Contact Section */
+.contact {
+  background: transparent;
+  background: url("land.jpg")
+              no-repeat;
+  background-position: bottom;
+  background-attachment: fixed;
+  margin-bottom: 0px;
+  height: 425px;
+}
+
+
+/* MEDIA QUERIES */
