--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-body {
-}
 
 /* Navigation */
 .navbar {
@@ -15,19 +13,19 @@ body {
   color: black;
 }
 .navbar-brand:hover {
-  color: #C57ED3;
-  border: 1px solid #C57ED3;
+  color: grey;
+  border: 1px solid grey;
 }
 .navbar-nav li a {
   color: black;
   margin: -10px 5px 5px 5px;
 }
 .navbar-nav li a:hover {
-  color: #C57ED3;
-  border: 1px solid #C57ED3;
+  color: grey;
+  border: 1px solid grey;
 }
 .navbar-toggler {
-  border-color: #C57ED3;
+  border-color: grey;
 }
 .navbar-toggler-icon {
   background: transparent;
@@ -40,13 +38,13 @@ body {
   transition: 1s ease 0s;
   box-shadow: 0 0 4px grey;
   .navbar-brand {
-    color: #C57ED3;
+    color: grey;
     transition: color 1s ease 0s;
   }
   .navbar-nav {
     >li {
       >a {
-        color: #C57ED3;
+        color: grey;
         transition: color 1s ease 0s;
       }
     }
@@ -62,6 +60,7 @@ body {
   background-attachment: fixed;
   margin-bottom: 0px;
   height: 375px;
+  border-radius: 0%;
 }
 .jumbotron .container {
   padding-top: 2rem;
@@ -110,7 +109,7 @@ body {
 }
 
 /* Contact Section */
-.contact {
+.contact-background {
   background: transparent;
   background: url("land.jpg")
               no-repeat;
@@ -118,6 +117,16 @@ body {
   background-attachment: fixed;
   margin-bottom: 0px;
   height: 425px;
+}
+.contact-font {
+  color: white;
+  text-align: center;
+}
+.contact-spacing {
+  padding-top: 2rem;
+}
+form button {
+  background-color: grey;
 }
 
 
